# django-starter

./: .gitignore  README.rst  pyproject.toml
core/: admin.py  models.py  views.py
core/templates/: base.html  index.html
core/templates/components/: alpine-counter.html
core/templatetags/: duration_extras.py  form_extras.py  operator_extras.py
starter/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/css/: starter.css
