[project]
    name = "django-starter"
    version = "0.1.0"
    description = ""
    authors = [
        {name = "Kyle Jensen",email = "kyle@nullandvoid.digital"}
    ]
    requires-python = ">=3.12"

[tool.poetry]
    package-mode = false

[tool.poetry.dependencies]
    python = "^3.12"
    django = "^5.1"
    whitenoise = "^6.7"
    pip = "^25.0.1"

[tool.poetry.group.dev]
    optional = true

[tool.poetry.group.dev.dependencies]
    ipython = "^8.31.0"
    black = {extras = ["d"], version = "^24.10.0"}
    setuptools = "^75.8.0"
    django-extensions = "^3.2.3"
    django-debug-toolbar = "^5.0.1"
    werkzeug = "^3.1.3"
    pygraphviz = "^1.14"

[tool.poetry.group.prod]
    optional = true

[tool.poetry.group.prod.dependencies]

[build-system]
    requires = ["poetry-core>=2.0.0,<3.0.0"]
    build-backend = "poetry.core.masonry.api"